--- a/public/index.html
+++ b/public/index.html
@@ -4,25 +4,37 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio</title>
+  <title>Developer Portfolio</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <section class="hero">
     <h1 class="name">YOUR NAME</h1>
+    <p class="role">Full Stack Developer</p>
+  </section>
+
+  <section class="skills">
+    <h2>Skills</h2>
+    <p>JavaScript, Node.js, Express, React, HTML, CSS, MongoDB, SQL, Git, Docker, and more.</p>
+  </section>
+
+  <section class="technologies">
+    <h2>Technologies & Tools</h2>
+    <p>Proficient in building scalable web applications, RESTful APIs, and using containerized environments for development and deployment.</p>
   </section>
 
   <section class="projects">
-    <div class="project">Project 1</div>
-    <div class="project">Project 2</div>
-    <div class="project">Project 3</div>
-    <div class="project">Project 4</div>
-    <div class="project">Project 5</div>
+    <h2>Projects</h2>
+    <div class="project">Project 1: E-commerce Platform</div>
+    <div class="project">Project 2: Social Media App</div>
+    <div class="project">Project 3: Portfolio Website</div>
+    <div class="project">Project 4: Task Management API</div>
+    <div class="project">Project 5: Blog CMS</div>
   </section>
 
   <section class="about">
     <h2>About Me</h2>
-    <p>Brief text about you here...</p>
+    <p>Passionate about creating efficient and scalable web solutions with a keen focus on performance and user experience. I enjoy learning new technologies and continuously improving my skill set.</p>
   </section>
 
   <section class="contact">
@@ -37,6 +49,7 @@
       <a href="#">Twitter</a>
       <a href="#">LinkedIn</a>
       <a href="#">GitHub</a>
+      <a href="#">Discord</a> <!-- Added Discord link here -->
     </div>
   </section>
 
