--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
   <section class="hero">
-    <h1 class="name">YOUR NAME</h1>
+    <h1 class="name">
+      <!-- Each letter wrapped in a span for individual control -->
+      <span>Y</span><span>O</span><span>U</span><span>R</span> 
+      <span>N</span><span>A</span><span>M</span><span>E</span>
+    </h1>
     <p class="role">Full Stack Developer</p>
   </section>
 
