image finally works

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,6 @@
 <body>
   <section class="hero">
     <h1 class="name">
-      <!-- Each letter wrapped in a span for individual control -->
       <span>Y</span><span>O</span><span>U</span><span>R</span> 
       <span>N</span><span>A</span><span>M</span><span>E</span>
     </h1>
@@ -29,11 +28,13 @@
 
   <section class="projects">
     <h2>Projects</h2>
-    <div class="project">Project 1: E-commerce Platform</div>
-    <div class="project">Project 2: Social Media App</div>
-    <div class="project">Project 3: Portfolio Website</div>
-    <div class="project">Project 4: Task Management API</div>
-    <div class="project">Project 5: Blog CMS</div>
+    
+    <!-- Unique classes for each project -->
+    <div class="project project-1">Project 1: E-commerce Platform</div>
+    <div class="project project-2">Project 2: Social Media App</div>
+    <div class="project project-3">Project 3: Portfolio Website</div>
+    <div class="project project-4">Project 4: Task Management API</div>
+    <div class="project project-5">Project 5: Blog CMS</div>
   </section>
 
   <section class="about">
@@ -49,12 +50,12 @@
       <textarea name="message" placeholder="Your Message" required></textarea>
       <button type="submit">Send</button>
     </form>
-    <div id="formResponse" class="form-response"></div> <!-- For displaying success/failure message -->
+    <div id="formResponse" class="form-response"></div>
     <div class="socials">
       <a href="#">Twitter</a>
       <a href="#">LinkedIn</a>
       <a href="#">GitHub</a>
-      <a href="#">Discord</a> <!-- Added Discord link here -->
+      <a href="#">Discord</a>
     </div>
   </section>
 
