added nice text

--- a/public/index.html
+++ b/public/index.html
@@ -26,20 +26,21 @@
     <p>Proficient in building scalable web applications, RESTful APIs, and using containerized environments for development and deployment.</p>
   </section>
 
-  <section class="projects">
-    <h2>Projects</h2>
-    
-    <!-- Unique classes for each project -->
-    <div class="project project-1">Project 1: E-commerce Platform</div>
-    <div class="project project-2">Project 2: Social Media App</div>
-    <div class="project project-3">Project 3: Portfolio Website</div>
-    <div class="project project-4">Project 4: Task Management API</div>
-    <div class="project project-5">Project 5: Blog CMS</div>
-  </section>
-
   <section class="about">
+    <!-- Visible <About> tag at top left -->
+    <span class="about-tag top">&lt;About&gt;</span>
+
     <h2>About Me</h2>
-    <p>Passionate about creating efficient and scalable web solutions with a keen focus on performance and user experience. I enjoy learning new technologies and continuously improving my skill set.</p>
+    <p>I’m a student studying <strong>Development of Computer Games and Multimedia Applications</strong> at Creative Hill College. Currently, I focus mainly on web applications, striving to make them highly interactive and optimized for all platforms and devices.</p>
+
+    <p>I’m well-versed in using frameworks; this website primarily relies on <strong>Three.js</strong> and <strong>GSAP</strong> as its main frameworks, with additional tools listed below.</p>
+
+    <p>With a strong emphasis on <strong>Progressive Enhancement</strong>, I continually seek creative ways to improve my skills. I stay updated by reading books and exploring new technologies.</p>
+
+    <blockquote class="quote">“Because the world is so faithless, I go my way in mourning.”<br>– Pieter Bruegel</blockquote>
+
+    <!-- Visible </About> tag at bottom left -->
+    <span class="about-tag bottom">&lt;/About&gt;</span>
   </section>
 
   <section class="contact">
