--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-<!-- public/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +9,7 @@
 <body>
   <section class="hero">
     <h1 class="name">
-      <span>Y</span><span>O</span><span>U</span><span>R</span> 
+      <span>Y</span><span>O</span><span>U</span><span>R</span>
       <span>N</span><span>A</span><span>M</span><span>E</span>
     </h1>
     <p class="role">Full Stack Developer</p>
@@ -27,7 +26,6 @@
   </section>
 
   <section class="about">
-    <!-- Visible <About> tag at top left -->
     <span class="about-tag top">&lt;About&gt;</span>
 
     <h2>About Me</h2>
@@ -39,8 +37,25 @@
 
     <blockquote class="quote">“Because the world is so faithless, I go my way in mourning.”<br>– Pieter Bruegel</blockquote>
 
-    <!-- Visible </About> tag at bottom left -->
     <span class="about-tag bottom">&lt;/About&gt;</span>
+  </section>
+
+  <section class="projects">
+    <h2>Projects</h2>
+    <div class="project-container">
+      <div class="project project-1">
+        <h3>Project One</h3>
+        <p>Interactive portfolio with 3D animations</p>
+      </div>
+      <div class="project project-2">
+        <h3>Project Two</h3>
+        <p>Social media platform for developers</p>
+      </div>
+      <div class="project project-3">
+        <h3>Project Three</h3>
+        <p>Personal portfolio with various sections</p>
+      </div>
+    </div>
   </section>
 
   <section class="contact">
