--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="public/images/Favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Developer Portfolio</title>
+  <title>Hanuš Valenta ⁓ Digital Craftsman and Dork</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <section class="hero">
     <h1 class="name">
-      <span>Y</span><span>O</span><span>U</span><span>R</span>
-      <span>N</span><span>A</span><span>M</span><span>E</span>
+      <span>H</span><span>A</span><span>N</span><span>U</span><span>S</span>
+      <span>_</span>
+      <span>V</span><span>A</span><span>L</span><span>E</span><span>N</span><span>T</span><span>A</span>
     </h1>
     <p class="role">Full Stack Developer</p>
   </section>
@@ -20,22 +22,16 @@
     <p>JavaScript, Node.js, Express, React, HTML, CSS, MongoDB, SQL, Git, Docker, and more.</p>
   </section>
 
-  <section class="technologies">
-    <h2>Technologies & Tools</h2>
-    <p>Proficient in building scalable web applications, RESTful APIs, and using containerized environments for development and deployment.</p>
-  </section>
-
   <section class="about">
     <span class="about-tag top">&lt;About&gt;</span>
 
-    <h2>About Me</h2>
     <p>I’m a student studying <strong>Development of Computer Games and Multimedia Applications</strong> at Creative Hill College. Currently, I focus mainly on web applications, striving to make them highly interactive and optimized for all platforms and devices.</p>
 
     <p>I’m well-versed in using frameworks; this website primarily relies on <strong>Three.js</strong> and <strong>GSAP</strong> as its main frameworks, with additional tools listed below.</p>
 
     <p>With a strong emphasis on <strong>Progressive Enhancement</strong>, I continually seek creative ways to improve my skills. I stay updated by reading books and exploring new technologies.</p>
 
-    <blockquote class="quote">“Because the world is so faithless, I go my way in mourning.”<br>– Pieter Bruegel</blockquote>
+    <blockquote class="quote">“People said I should accept the world. Bullshit! I don't accept the world.”<br> – Richard Stallman</blockquote>
 
     <span class="about-tag bottom">&lt;/About&gt;</span>
   </section>
@@ -43,20 +39,21 @@
   <section class="projects">
     <h2>Projects</h2>
     <div class="project-container">
-      <div class="project project-1">
-        <h3>Project One</h3>
-        <p>Interactive portfolio with 3D animations</p>
-      </div>
-      <div class="project project-2">
-        <h3>Project Two</h3>
-        <p>Social media platform for developers</p>
-      </div>
-      <div class="project project-3">
-        <h3>Project Three</h3>
-        <p>Personal portfolio with various sections</p>
-      </div>
+      <a href="https://hanusvalenta.itch.io/hollowtail" class="project project-1">
+        <h3>Hollowtail</h3>
+        <p>Quick game from the 20./21.9.2024 Creative Hill College hackathon</p>
+      </a>
+      <a href="https://github.com/hanusvalenta/Valuntu" class="project project-2">
+        <h3>Valuntu</h3>
+        <p>Experimental hyper-bloated linux distro done for my daily use</p>
+      </a>
+      <a href="https://github.com/hanusvalenta/Chcoom" class="project project-3">
+        <h3>Chcoom</h3>
+        <p>2.5D style boomer shooter</p>
+      </a>
     </div>
   </section>
+  
 
   <section class="contact">
     <h2>Contact</h2>
@@ -66,12 +63,11 @@
       <textarea name="message" placeholder="Your Message" required></textarea>
       <button type="submit">Send</button>
     </form>
-    <div id="formResponse" class="form-response"></div> <!-- Message appears here -->    
+    <div id="formResponse" class="form-response"></div>  
     <div class="socials">
-      <a href="#">Twitter</a>
-      <a href="#">LinkedIn</a>
-      <a href="#">GitHub</a>
-      <a href="#">Discord</a>
+      <a href="https://www.linkedin.com/in/hanuš-valenta-324b212b1">LinkedIn</a>
+      <a href="https://github.com/hanusvalenta">GitHub</a>
+      <a href="https://discord.com/users/1088489927739703336">Discord</a>
     </div>
   </section>
 
